src/test/ui/enum-variant-generic-args.stderr
error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:9:27
   |
LL |         Self::TSVariant::<()>(());
   |                           ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:11:16
   |
LL |         Self::<()>::TSVariant(());
   |                ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:13:16
   |
LL |         Self::<()>::TSVariant::<()>(());
   |                ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:13:33
   |
LL |         Self::<()>::TSVariant::<()>(());
   |                                 ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:19:26
   |
LL |         Self::SVariant::<()> { v: () };
   |                          ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:19:35
   |
LL |         Self::SVariant::<()> { v: () };
   |                                   ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:22:16
   |
LL |         Self::<()>::SVariant { v: () };
   |                ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:22:35
   |
LL |         Self::<()>::SVariant { v: () };
   |                                   ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:25:16
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:25:32
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                                ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:25:41
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                                         ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:35:29
   |
LL |     Enum::<()>::TSVariant::<()>(());
   |                             ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:38:24
   |
LL |     Alias::TSVariant::<()>(());
   |                        ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:40:30
   |
LL |     Alias::<()>::TSVariant::<()>(());
   |                              ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:43:29
   |
LL |     AliasFixed::TSVariant::<()>(());
   |                             ^^ type argument not allowed

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:45:18
   |
LL |     AliasFixed::<()>::TSVariant(());
   |                  ^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:47:18
   |
LL |     AliasFixed::<()>::TSVariant::<()>(());
   |                  ^^ unexpected type argument

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:47:35
   |
LL |     AliasFixed::<()>::TSVariant::<()>(());
   |                                   ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:53:28
   |
LL |     Enum::<()>::SVariant::<()> { v: () };
   |                            ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:56:23
   |
LL |     Alias::SVariant::<()> { v: () };
   |                       ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:58:29
   |
LL |     Alias::<()>::SVariant::<()> { v: () };
   |                             ^^ type argument not allowed

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:61:28
   |
LL |     AliasFixed::SVariant::<()> { v: () };
   |                            ^^ type argument not allowed

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:63:18
   |
LL |     AliasFixed::<()>::SVariant { v: () };
   |                  ^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:65:18
   |
LL |     AliasFixed::<()>::SVariant::<()> { v: () };
   |                  ^^ unexpected type argument

error[E0109]: type arguments are not allowed on this entity
  --> $DIR/enum-variant-generic-args.rs:65:34
   |
LL |     AliasFixed::<()>::SVariant::<()> { v: () };
   |                                  ^^ type argument not allowed

error: aborting due to 25 previous errors

Some errors occurred: E0107, E0109, E0308.
For more information about an error, try `rustc --explain E0107`.
